--- a/MDK-ARM/stm32g431rbt6_mc_ABZ.uvprojx
+++ b/MDK-ARM/stm32g431rbt6_mc_ABZ.uvprojx
@@ -635,6 +635,11 @@
               <FileType>1</FileType>
               <FilePath>..\FOC\source\mcLVSensorless.c</FilePath>
             </File>
+            <File>
+              <FileName>mcSensor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\FOC\source\mcSensor.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
