--- a/MDK-ARM/stm32g431rbt6_mc_ABZ.uvprojx
+++ b/MDK-ARM/stm32g431rbt6_mc_ABZ.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_FULL_LL_DRIVER,STM32G431xx,ARM_MATH_CM4,__TARGET_FPU_VFP,HSE_VALUE=8000000,HSE_STARTUP_TIMEOUT=100,LSE_STARTUP_TIMEOUT=5000,LSE_VALUE=32768,EXTERNAL_CLOCK_VALUE=12288000,HSI_VALUE=16000000,LSI_VALUE=32000,VDD_VALUE=3300,PREFETCH_ENABLE=0,INSTRUCTION_CACHE_ENABLE=1,DATA_CACHE_ENABLE=1</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32G4xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32G4xx/Include;../Drivers/CMSIS/Include;../FOC/include;../FOC/interface;../Middlewares/ST/ARM/DSP/Inc;..\SEGGER\RTT</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32G4xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32G4xx/Include;../Drivers/CMSIS/Include;../FOC/include;../FOC/interface;../Middlewares/ST/ARM/DSP/Inc;../SEGGER/RTT</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
